--- a/app/src/main/res/layout/info_main.xml
+++ b/app/src/main/res/layout/info_main.xml
@@ -17,17 +17,20 @@
         android:textSize="25sp"
         app:fontFamily="@font/tajawal_light"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_color_tag" />
+        app:layout_constraintTop_toBottomOf="@+id/infoColorTag" />
 
     <TextView
         android:id="@+id/nameTextBox"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:text="@string/name"
         android:textSize="40sp"
         app:fontFamily="@font/tajawal_light"
+        app:layout_constraintEnd_toStartOf="@+id/calTextBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/brandTextView" />
 
@@ -157,9 +160,9 @@
         android:layout_marginRight="30dp"
         android:text="@string/name"
         android:textSize="40sp"
-        app:fontFamily="@font/tajawal_light"
+        app:fontFamily="@font/tajawal_medium"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_color_tag" />
+        app:layout_constraintTop_toBottomOf="@+id/infoColorTag" />
 
     <EditText
         android:id="@+id/gramsEditText"
@@ -172,6 +175,29 @@
         android:layout_marginRight="150dp"
         android:autoText="false"
         android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="100"
+        android:inputType="number"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameTextBox8" />
+
+    <EditText
+        android:id="@+id/proteinEditText"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
         android:ems="10"
         android:gravity="center"
         android:hint="100"
@@ -181,11 +207,136 @@
         android:textSize="18sp"
         app:fontFamily="@font/tajawal_light"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/calTextBox" />
+
+    <EditText
+        android:id="@+id/carbsEditText"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="100"
+        android:inputType="number|textEmailAddress"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/proteinTextBox" />
+
+    <EditText
+        android:id="@+id/fatEditText"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="100"
+        android:inputType="number|textEmailAddress"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/carbsTextBox" />
+
+    <EditText
+        android:id="@+id/sugarEditText"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="100"
+        android:inputType="number|textEmailAddress"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fatTextBox" />
+
+    <EditText
+        android:id="@+id/nameEditText"
+        android:layout_width="200dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="Name"
+        android:inputType="text"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextBox8" />
+        app:layout_constraintTop_toBottomOf="@+id/brandTextView" />
+
+    <EditText
+        android:id="@+id/calEditText"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="calories"
+        android:inputType="number|textEmailAddress"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoColorTag" />
+
+    <EditText
+        android:id="@+id/brandEditText"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
+        android:autoText="false"
+        android:background="@drawable/edit_text"
+        android:cursorVisible="true"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="Brand"
+        android:inputType="text"
+        android:paddingTop="5sp"
+        android:singleLine="true"
+        android:textSize="18sp"
+        app:fontFamily="@font/tajawal_light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/infoColorTag" />
 
     <LinearLayout
-        android:id="@+id/item_color_tag"
+        android:id="@+id/infoColorTag"
         android:layout_width="106dp"
         android:layout_height="30dp"
         android:layout_alignParentStart="true"
