--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -8,7 +8,7 @@
 
 
     <LinearLayout
-        android:id="@+id/item_color_tag"
+        android:id="@+id/colorTag"
         android:layout_width="106dp"
         android:layout_height="30dp"
         android:layout_alignParentStart="true"
