--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -20,7 +20,7 @@
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:title="@string/menu_account_settings" />
+                android:title="Logout" />
         </menu>
     </item>
 
